--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Giovane</a> para o <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Giovane</a> pelo <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a>.</p>
     </footer>   
 </body>
 </html>
